# mcpbot

./: .env.example  .gitignore  Makefile  README.md  client.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  server.Dockerfile
dock/data/: system_instruction.txt
src/mcpbot/clients/: fastmcp_client.py  gemini_client.py  gemini_client_tui.py  gemini_client_web.py
src/mcpbot/clients/static/: app.js  index.html  styles.css
src/mcpbot/server/: server.py
src/mcpbot/server/temps/: analyse_schema.py  db_tools.py  discover_tables.py  echarts.py  echarts.txt  echartsmore.py  execute_query.py  format_response.py  generate_smart_sql.py  get_sample_data.py  select_best_table.py
src/mcpbot/server/temps/static/: app.js  index.html  styles.css
src/mcpbot/server/tools/: analyse_schema.py  calcul_tools.py  db_helper.py  dice_tools.py  echarts_tools.py  nmap_tools.py  selectdb_tools.py  ssl_tools.py  tool_logger.py  weather_tools.py
